HelloUltraviolet/Fixtures/RejectedSource/Procedures/MissingExplicitReturn/Expected.uv
//! Expected diagnostic metadata for the MissingExplicitReturn rejected-source specimen.

expectedDiagnostic("E-TYP-1507", "rule.15.WF-ProcBody-ExplicitReturn-Err")
